# dace

./: .clang-format  .conftest.py  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  .travis.yml  AUTHORS  BROADCAST_DESIGN.md  CITATION.cff  CODEGEN_STYLE_PERFORMANCE.md  CODE_GUIDELINES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_BUGFIXES.md  CanonicalizationPipeline.md  EXTERNAL_SDFG_COMPILE.md  ICON_POINTER_ALLOCATABLE_PLAN.md  ICON_VELOCITY_FULL_PLAN.md  Jenkinsfile  LANE_ID_SCHEME_V2_PLAN.md  LICENSE  MANIFEST.in  READABLE_CODEGEN_MERGE.md  READABLE_CODEGEN_OPTIONS.md  README.md  SMALLER_FRACTION  before_permute.sdfgz  bisect.sh  branch_dependent_value_write_single_branch_nonzero_write_use_pass_false_branch_eliminated.sdfgz  branch_dependent_value_write_single_branch_nonzero_write_use_pass_true_branch_eliminated.sdfgz  branch_dependent_value_write_single_branch_use_pass_false_branch_eliminated.sdfgz  branch_dependent_value_write_single_branch_use_pass_true_branch_eliminated.sdfgz  branch_dependent_value_write_two_use_pass_false_branch_eliminated.sdfgz  branch_dependent_value_write_two_use_pass_true_branch_eliminated.sdfgz  branch_dependent_value_write_use_pass_false_branch_eliminated.sdfgz  (+93 more)
 ci/: Dockerfile  cscs_gpu.yml
.claude/: settings.json
.github/: citation_format_authors.py  labeler.yml
Fissioning/: Map_overwrite_test.py  conditional_overwrite_test.py  loop_overwrite_test.py  scalar_fission_array_test.py
_all_tests/: call_sdfg_test.py  (+39 more)
cloudsc_thesis/cloudsc_instructions/: CMakeLists.txt  README.md  cloudsc_driver_mod.F90.template  working.cc
dace/codegen/: CMakeLists.txt  Xilinx_HLS.tcl.in  Xilinx_IP.tcl.in  __init__.py  allocation_scopes.py  build_cache.py  codegen.py  codeobject.py  command_db.py  common.py  compiled_sdfg.py  compiler.py  compiler_family.py  control_flow.py  control_flow_2.py  cppunparse.py  ctypes_compiled_sdfg.py  dispatcher.py  exceptions.py  nanobind_bindings.py  nanobind_compiled_sdfg.py  nanobind_support.py  native_compiler.py  prettycode.py  scheduling.py  sdfgcc.py  sourcemap.py  symbol_scopes.py  target.py  vscode.py
dace/codegen/gpu_specialization_utilities/: copy_strategies.py  gpu_utils.py
dace/codegen/instrumentation/: __init__.py  accuracy.py  allocation.py  cuda_events.py  fpga.py  gpu_events.py  gpu_tx_markers.py  likwid.py  nvtx.py  papi.py  papi_vectorization.cmake  perfdb.py  perfsettings.py  provider.py  report.py  timer.py  utils.py
dace/codegen/instrumentation/data/: data_dump.py  data_report.py
dace/codegen/targets/: __init__.py  common.py  cpp.py  cpu.py  cuda.py  experimental_cpu.py  experimental_cuda.py  fpga.py  framecode.py  immaterial.py  intel_fpga.py  ipu.py  memorypool.py  mpi.py  rtl.py  snitch.py  target.py  transientpool.py  unroller.py  xilinx.py
dace/codegen/targets/ascendc/: CMakeCCECompiler.cmake.in  CMakeCCEFunction.cmake  CMakeCCEInformation.cmake  CMakeDetermineCCECompiler.cmake  CMakeTestCCECompiler.cmake  ascendc.py  ascendc_copy_utils_910a.py  ascendc_copy_utils_910b.py  cpu.cmake  npu.cmake
dace/codegen/targets/experimental_cuda_helpers/: copy_strategies.py  gpu_stream_manager.py  gpu_utils.py  new_copy_strategies.py  reduced_ir_check.py  scope_strategies.py
dace/codegen/targets/fpga_helper/: __init__.py  fpga_utils.py
dace/codegen/targets/gpu_helpers/: copy_strategies.py  gpu_utils.py
dace/codegen/targets/ipu_files/: ipu_utils.py
dace/codegen/targets/mlir/: __init__.py  mlir.cmake  mlir.py  utils.py
dace/codegen/targets/new_cuda_codegen/: copy_strategies.py  experimental_cuda.py
dace/codegen/targets/soft_hier/: CMakeDetermineSHCCCompiler.cmake  CMakeSHCCCompiler.cmake.in  CMakeSHCCFunction.cmake  CMakeSHCCInformation.cmake  CMakeTestSHCCCompiler.cmake  README  dace.sh.in  soft_hier.py
dace/codegen/targets/sve/: codegen.py  cppunparse.py  infer.py  infer_types.py  inference.py  preprocess.py  type_compatibility.py  unparse.py  util.py  vectorization.py
dace/codegen/targets/sve/tests/: application_spmv_test.py  memlet_test.py  wcr_test.py
dace/codegen/tools/: ascend_runtime.py  dacestub.cpp  get_cuda_arch.cpp  get_hip_arch.cpp  gpu_runtime.py  type_inference.py
dace/frontend/hlfir/: .gitignore  CMakeLists.txt  README.md  build_bridge.py  fortran_parser.py  hlfir_to_sdfg.py  integer_power_exponents.py  preprocess.py
dace/frontend/hlfir/bindings/: __init__.py  block_builders.py  emit_bindings.py  flatten_plan.py  fortran_interface.py  frozen_signature.py  layout_match.py  loop_copy.py
dace/frontend/hlfir/bindings/templates/: alias.f90.in  c_interface.f90.in  copy_in.f90.in  copy_out.f90.in  handle_state.f90.in  module.f90.in  symbol_populate.f90.in  wrapper_call.f90.in  wrapper_head.f90.in
dace/frontend/hlfir/bridge/: bridge.cpp  extract_ast.cpp  extract_ast.h  extract_vars.cpp  extract_vars.h  trace_utils.cpp  trace_utils.h
dace/frontend/hlfir/bridge/ast/: .clangd  assigns.cpp  assigns.inc  ast_helpers.h  ast_internal.h  control_flow.cpp  control_flow.inc  dispatch.cpp  dispatch.inc  elementals.cpp  elementals.inc  expressions.cpp  expressions.inc
dace/frontend/hlfir/builder/: __init__.py  access.py  context.py  descriptors.py  emit_cfg.py  emit_library.py  emit_tasklet.py
dace/frontend/hlfir/intrinsics/: __init__.py  base.py  direct.py  elementwise.py  linalg.py  reduction.py
dace/frontend/hlfir/intrinsics/direct/: __init__.py
dace/frontend/hlfir/intrinsics/linalg/: __init__.py  dot_product.py  matmul.py  transpose.py
dace/frontend/hlfir/intrinsics/reductions/: __init__.py  scalar_reductions.py
dace/frontend/hlfir/passes/: DefaultIntent.cpp  ExpandRegionAssign.cpp  ExpandVectorSubscriptGather.cpp  ExpandVectorSubscriptScatter.cpp  FlattenStructs.cpp  FoldCopyInOut.cpp  FoldElementAliases.cpp  InlineAll.cpp  LiftAllocArrayOfRecords.cpp  LiftReductionOperands.cpp  LowerFirSelectCase.cpp  MaterialiseAssociates.cpp  Passes.cpp  Passes.h  PropagateShapes.cpp  RejectPolymorphism.cpp  RewritePointerAssigns.cpp  RewriteSequenceAssociation.cpp  VerifyNoUnresolvedCalls.cpp
(+10893 files in other folders)
