[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dace"
dynamic = ["version"]
description = "Data-Centric Parallel Programming Framework"
readme = "README.md"
requires-python = ">=3.10, <3.15"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "SPCL @ ETH Zurich", email = "talbn@inf.ethz.ch"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "networkx>=2.5,<=3.5",
    "astunparse",
    "sympy>=1.9",
    "pyyaml",
    "ply",
    "fparser>=0.1.3",
    "dill",
    "pyreadline; platform_system == 'Windows'",
    "packaging",
    "typing-extensions",
    "scikit-build",
    "cmake",
]

[project.optional-dependencies]
ml = ["onnx", "torch", "onnxsim", "onnxscript", "onnxruntime", "protobuf", "ninja"]
testing = [
    "coverage",
    "pytest-cov",
    "scipy",
    "absl-py",
    "opt_einsum",
    "pymlir",
    "click",
    "ipykernel",
    "nbconvert",
    "pytest-timeout",
]
ml-testing = [
    "coverage",
    "pytest-cov",
    "scipy",
    "absl-py",
    "opt_einsum",
    "pymlir",
    "click",
    "ipykernel",
    "nbconvert",
    "pytest-timeout",
    "transformers==4.50",
    "jax<=0.6.2",
    "efficientnet_pytorch",
]
docs = ["jinja2<3.2.0", "sphinx-autodoc-typehints", "sphinx-rtd-theme>=0.5.1"]
linting = ["pre-commit==4.1.0", "yapf==0.43.0"]

[project.scripts]
dacelab = "dace.cli.dacelab:main"
sdfv = "dace.cli.sdfv:main"
sdfgcc = "dace.cli.sdfgcc:main"
sdfg-diff = "dace.cli.sdfg_diff:main"
fcfd = "dace.cli.fcdc:main"
daceprof = "dace.cli.daceprof:main"
dace-external-transformation-registry = "dace.cli.external_transformation_registry:main"

[project.urls]
Homepage = "https://github.com/spcl/dace"

[tool.setuptools.dynamic]
version = {attr = "dace.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools.package-data]
dace = [
    "*.yml",
    "codegen/CMakeLists.txt",
    "codegen/tools/*.cpp",
    "codegen/**/*.cmake",
    "external/moodycamel/*.h",
    "external/moodycamel/LICENSE.md",
    "external/cub/cub/**/*",
    "external/cub/LICENSE.TXT",
    "runtime/include/**/*",
    "libraries/**/include/**/*",
    "viewer/webclient/dist/*.js",
    "viewer/webclient/external_libs/**/*",
    "viewer/webclient/*.css",
    "viewer/webclient/*.html",
    "viewer/templates/**/*",
    "viewer/**/LICENSE",
]
